@@ -1,48 +1,44 @@
-#ifdef HAVE_CONFIG_H
-#include <config.h>
-#endif
-
-#include <stdio.h>
-#include <stdarg.h>
-#include <errno.h>
-#ifdef HAVE_ICONV
-#include <iconv.h>
-#endif
-#ifdef HAVE_LANGINFO_H
-#include <langinfo.h>
-#endif
-
 #include "system.h"
+#include <stdarg.h>
 #include "poptint.h"
 
 #ifdef HAVE_ICONV
-static char *
-strdup_locale_from_utf8 (char *buffer)
+static /*@only@*/ /*@null@*/ char *
+strdup_locale_from_utf8 (/*@null@*/ char *buffer)
+	/*@*/
 {
     char *codeset = NULL;
-    char *pout = NULL, *dest_str;
+    char *dest_str;
     iconv_t fd;
-    size_t ib, ob, dest_size;
-    int done, is_error;
-    size_t err, used;
 
-    if (!buffer)
+    if (buffer == NULL)
 	return NULL;
 
 #ifdef HAVE_LANGINFO_H
+/*@-type@*/
     codeset = nl_langinfo (CODESET);
+/*@=type@*/
 #endif
 
     if (codeset && strcmp(codeset, "UTF-8")
      && (fd = iconv_open(codeset, "UTF-8")) != (iconv_t)-1)
     {
 	char *pin = buffer;
+	char *pout = NULL;
+	size_t ib, ob, dest_size;
+	int done;
+	int is_error;
+	size_t err;
 	char *shift_pin = NULL;
+	int xx;
 
 	err = iconv(fd, NULL, &ib, &pout, &ob);
 	dest_size = ob = ib = strlen(buffer);
 	dest_str = pout = malloc((dest_size + 1) * sizeof(*dest_str));
+	if (dest_str)
+	    *dest_str = '\0';
 	done = is_error = 0;
+	if (pout != NULL)
 	while (!done && !is_error) {
 	    err = iconv(fd, &pin, &ib, &pout, &ob);
 
@@ -52,12 +48,16 @@ strdup_locale_from_utf8 (char *buffer)
 		    done = 1;
 		    /*@switchbreak@*/ break;
 		case E2BIG:
-		    used = pout - dest_str;
+		{   size_t used = pout - dest_str;
 		    dest_size *= 2;
 		    dest_str = realloc(dest_str, (dest_size + 1) * sizeof(*dest_str));
+		    if (dest_str == NULL) {
+			is_error = 1;
+			continue;
+		    }
 		    pout = dest_str + used;
 		    ob = dest_size - used;
-		    /*@switchbreak@*/ break;
+		}   /*@switchbreak@*/ break;
 		case EILSEQ:
 		    is_error = 1;
 		    /*@switchbreak@*/ break;
@@ -66,7 +66,7 @@ strdup_locale_from_utf8 (char *buffer)
 		    /*@switchbreak@*/ break;
 		}
 	    } else {
-		if (!shift_pin) {
+		if (shift_pin == NULL) {
 		    shift_pin = pin;
 		    pin = NULL;
 		    ib = 0;
@@ -75,42 +75,51 @@ strdup_locale_from_utf8 (char *buffer)
 		}
 	    }
 	}
-	iconv_close(fd);
-	*pout = '\0';
-	dest_str = strdup(dest_str);
+	xx = iconv_close(fd);
+	if (pout)
+	    *pout = '\0';
+	if (dest_str != NULL)
+	    dest_str = xstrdup(dest_str);
     } else {
-	dest_str = strdup(buffer);
+	dest_str = xstrdup(buffer);
     }
 
     return dest_str;
 }
 #endif
 
-static char *
+/*@-mustmod@*/	/* LCL: can't see the ap modification. */
+static /*@only@*/ /*@null@*/ char *
 strdup_vprintf (const char *format, va_list ap)
+	/*@modifies ap @*/
 {
-    char *buffer = NULL;
+    char *buffer;
     char c;
     va_list apc;
+    int xx;
 
+/*@-noeffectuncon -unrecog @*/
     va_copy(apc, ap);	/* XXX linux amd64/ppc needs a copy. */
+/*@=noeffectuncon =unrecog @*/
 
     buffer = calloc(sizeof(*buffer), vsnprintf (&c, 1, format, ap) + 1);
-    vsprintf(buffer, format, apc);
+    if (buffer != NULL)
+	xx = vsprintf(buffer, format, apc);
 
     va_end(apc);
 
     return buffer;
 }
+/*@=mustmod@*/
 
 char *
 POPT_prev_char (const char *str)
 {
-    char *p = (char*)str;
+    char *p = (char *)str;
 
     while (1) {
 	p--;
-	if ((*p & 0xc0) != 0x80)
+	if ((*p & 0xc0) != (char)0x80)
 	    return (char *)p;
     }
 }
@@ -128,6 +137,8 @@ POPT_fprintf (FILE* stream, const char *format, ...)
     va_start (args, format);
     buffer = strdup_vprintf(format, args);
     va_end (args);
+    if (buffer == NULL)
+	return retval;
 
 #ifdef HAVE_ICONV
     locale_str = strdup_locale_from_utf8(buffer);
